# mastermind

./: LICENSE  README.md
haskell/: Main.hs  Opts.hs  README.md  Simulation.hs  TODO  mastermind-sim.cabal
haskell/Strategies/: Dummy.hs  Entropy.hs  Expected.hs  Knuth.hs  MostParts.hs  Simple.hs  Simple2.hs  Util.hs
java/: README.md
java/src/simulation/: Main.java  Simulation.java  Statistics.java
java/src/strategy/: Answer.java  Code.java  IMastermindStrategy.java  T.java
java/src/strategy/implementations/: BasicStrategy.java  Dummy.java  Entropy.java  ExpectedSize.java  Knuth.java  Knuth2.java  MostParts.java  Random.java  Simple.java  Simple2.java
lua/: README.md  main.lua  simulation.lua
lua/lib/: util.lua
lua/strategies/: dummy.lua  entropy.lua  entropy2.lua  expectedsize.lua  knuth.lua  knuth2.lua  mostparts.lua  random.lua  simple.lua  simple2.lua  stupid.lua  util.lua
